--- a/requirements_py.txt
+++ b/requirements_py.txt
@@ -8,7 +8,8 @@ seaborn
 pyvirtualdisplay
 
 # Jupyter
-jupyter_client
+jupyter_client==5.3.1
+jupyter_core==4.6.1
 jupyter
 jupyterlab
 jupyter_nbextensions_configurator
